Matte (pq klar)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     <h1>
       Välkomna till mattesidan!
     </h1>
+    <h2>
+      PQ-Formeln
+    </h2>
+    Skriv in p: <input type="number" name="p" id="p" />
+    <br>
+    <br>
+    Skriv in q: <input type="number" name="p" id="q" />
+    <br>
+    <br>
+    <button id="submit" onclick="readValue()">Submit</button>
+    <div id="svar">
+      <br />
+    </div>
+    <div>
+        <input type="number" name="p" id="p" /><input type="number" name="p" id="p" /><input type="number" name="p" id="p" />
+    </div>
   </body>
   <script src="./js/script.js"></script>
 </html>
